# libbase64

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README  autobuild.sh  configure.ac
doc/: Makefile.am  libbase64.3
src/: Makefile.am  base64.c  base64.h  libbase64-1.pc.in
tests/: Makefile.am  base64_test.c
